--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-numpy==1.22.3 
-pandas==1.4.2 
-PyMySQL==1.0.2 
-python-dateutil==2.8.2 
-pytz==2022.1 
+cffi==1.15.0
+cryptography==37.0.2
+numpy==1.22.3
+pandas==1.4.2
+pycparser==2.21
+PyMySQL==1.0.2
+python-dateutil==2.8.2
+pytz==2022.1
 six==1.16.0
