adding airflow features

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-MYSQL_ROOT_PASSWORD=password 
-MYSQL_DATABASE=hackerrank
-MYSQL_USER=docker
-MYSQL_PASSWORD=docker
+MYSQL_ROOT_PASSWORD=root_password 
+MYSQL_DATABASE=hackerrank_db
+MYSQL_USER=hackerrank_user
+MYSQL_PASSWORD=hackerrank_pass
 MYSQL_PORT=3306
+POSTGRES_USER=airflow_user
+POSTGRES_PASSWORD=airflow_pass
+POSTGRES_DATABASE=airflow_db
+POSTGRES_PORT=5432
